--- a/.github/workflows/FTP_Deployment.yml
+++ b/.github/workflows/FTP_Deployment.yml
@@ -1,25 +1,16 @@
-name: Deployment Workflow
-
-on:
-  push:
-    branches:
-      - main
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  deploy:
-    name: FTP-Deployment
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: FTP-Deployment
-        env:
-          SERVER: ${{ secrets.FTP_SERVER }}
-          USERNAME: ${{ secrets.FTP_USERNAME }}
-          PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        run: |
-          # Use the environment variables to deploy your application
-          # Example deployment command:
-          # deploy_script.sh $SERVER $USERNAME $PASSWORD
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync files
+      uses: im-machakata/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ftp.progreenshapers.org
+        username: krpwgbax
+        password: ${{ secrets.ftp_PASSWORD }}
